--- a/assets/style.css
+++ b/assets/style.css
@@ -59,6 +59,23 @@ html {
 
 }
 
-.fa-solid {
-    background-color: white;
-}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
