--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 body, html {
     height: 100%;
+    width: 100%;
 }
 
 html {
@@ -78,4 +79,8 @@ div.gallery {
   div.desc {
     padding: 15px;
     text-align: center;
+  }
+
+  .contact {
+      width: 100%;
   }
