--- a/assets/style.css
+++ b/assets/style.css
@@ -1,97 +1,112 @@
-body, html {
-    height: 100%;
-    width: 100%;
-    margin: 0px;
-}
+* {
+    box-sizing: border-box;
+  }
 
-html {
-    background-color: #79AEA3;
-    scroll-behavior: smooth;
-}
-
-   .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://www.theday.com/storyimage/NL/20200618/NWS01/200619308/EP/1/3/EP-200619308.jpg&MaxW=800&q=62);
+  html {
+      scroll-behavior: smooth;
+  }
+  
+  body {
+    font-family: Arial;
+    padding: 10px;
+    background: #79AEA3;
+  }
+  
+  .header {
+    padding: 30px;
+    text-align: center;
+    background: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/hero-image.webp);
     height: 40%;
     background-position: top;
     background-repeat: repeat;
-    background-size: contain;
     position: relative;
-}
-
-.btn1, .btn2, .btn3 {
-    transition-duration: 0.4s;
-    font-size: 15px;
-    border-radius: 8px;
-    padding: 5px 12px;
-    border: 3px solid #79AEA3;
-}
-
-.btn1:hover, .btn2:hover, .btn3:hover {
-    background-color: #79AEA3;
+    border: 5px solid #484041;
+  }
+  
+  .header h1 {
+    font-size: 50px;
     color: white;
-    font-size: 18px;
-    border-radius: 8px;
-    padding: 5px 12px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
 
-.btn1:active, .btn2:active, .btn3:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
+  .topnav {
+    overflow: hidden;
+    background-color: #484041;
   }
 
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  .topnav a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+
+  .leftcolumn {   
+    width: 100%;
+  }
+  
+  .rightcolumn {
+    width: 100%;
+  }
+
+  .card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 30px;
+    border: 5px solid #484041;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #484041;
+    
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  .footer {
+    padding: 20px;
+    text-align: center;
+    background: white;
+    margin-top: 20px;
+    border: 5px solid #484041;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+  }
+
+.link-text {
+    margin-right: 1em;
+    padding-left: 13%;
 }
 
-.about-text, .about-text-two, .work-text, .contact-text {
+.contact {
     color: #484041;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-.link-text {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
-
-
-div.gallery {
-    margin: 2%;
-    border: 1px solid #ccc;
-    float: left;
-    width: 300px;
-  }
   
-  div.gallery:hover {
-    border: 1px solid #777;
-  }
-  
-  div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  /* div.desc {
-    padding: 15px;
-    text-align: center;
-  } */
-
-  .contact {
+  @media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
       width: 100%;
+      padding: 0;
+    }
   }
-
-  .my-work {
+  
+  @media screen and (max-width: 400px) {
+    .topnav a {
+      float: none;
       width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
+    }
   }
