--- a/assets/style.css
+++ b/assets/style.css
@@ -70,7 +70,7 @@
     color: #484041;
   }
   
-  .row:after {
+  .main:after {
     content: "";
     display: table;
     clear: both;
@@ -97,14 +97,14 @@
 }
   
   @media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {   
+    .work, .about {   
       width: 100%;
       padding: 0;
     }
   }
   
   @media screen and (max-width: 400px) {
-    .topnav a {
+    .navigation a {
       float: none;
       width: 100%;
     }
