--- a/assets/style.css
+++ b/assets/style.css
@@ -1,18 +1,18 @@
 * {
     box-sizing: border-box;
-  }
+}
 
-  html {
-      scroll-behavior: smooth;
-  }
-  
-  body {
+html {
+    scroll-behavior: smooth;
+}
+
+body {
     font-family: Arial;
     padding: 10px;
     background: #79AEA3;
-  }
-  
-  .header {
+}
+
+.header {
     padding: 30px;
     text-align: center;
     background: white;
@@ -22,21 +22,21 @@
     background-repeat: repeat;
     position: relative;
     border: 5px solid #484041;
-  }
-  
-  .header h1 {
+}
+
+.header h1 {
     font-size: 50px;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
+}
 
-  .navigation {
+
+.navigation {
     overflow: hidden;
     background-color: #484041;
-  }
+}
 
-  .navigation a {
+.navigation a {
     float: right;
     display: block;
     color: #f2f2f2;
@@ -44,39 +44,39 @@
     padding: 14px 16px;
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
-  .navigation a:hover {
+}
+
+.navigation a:hover {
     background-color: #ddd;
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
+}
 
-  .work {   
-    width: 100%;
-  }
-  
-  .about {
-    width: 100%;
-  }
 
-  .table {
+.work {
+    width: 100%;
+}
+
+.about {
+    width: 100%;
+}
+
+.table {
     background-color: white;
     padding: 20px;
     margin-top: 30px;
     border: 5px solid #484041;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #484041;
-  }
-  
-  .main:after {
+}
+
+.main:after {
     content: "";
     display: table;
     clear: both;
-  }
-  
-  .footer {
+}
+
+.footer {
     padding: 20px;
     text-align: center;
     background: white;
@@ -84,7 +84,7 @@
     border: 5px solid #484041;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
-  }
+}
 
 .link-text {
     margin-right: 1em;
@@ -95,17 +95,32 @@
     color: #484041;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-  
-  @media screen and (max-width: 800px) {
-    .work, .about {   
-      width: 100%;
-      padding: 0;
+
+.shw {
+    transition-duration: 0.4s;
+    border: #484041 solid 3px;
+}
+
+.shw:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,.70), 0 17px 50px 0 rgba(0,0,0,.70);
+}
+
+.brd-abt {
+    border: #484041 solid 3px;
+}
+
+@media screen and (max-width: 800px) {
+
+    .work,
+    .about {
+        width: 100%;
+        padding: 0;
     }
-  }
-  
-  @media screen and (max-width: 400px) {
+}
+
+@media screen and (max-width: 400px) {
     .navigation a {
-      float: none;
-      width: 100%;
+        float: none;
+        width: 100%;
     }
-  }
+}
