--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
     padding: 30px;
     text-align: center;
     background: white;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/hero-image.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/me-pic.jpg);
     height: 40%;
     background-position: top;
     background-repeat: repeat;
@@ -70,6 +70,11 @@ body {
     color: #484041;
 }
 
+
+.table p {
+    border-left: #484041 solid 3px;
+}
+
 .main:after {
     content: "";
     display: table;
@@ -108,6 +113,8 @@ body {
 .brd-abt {
     border: #484041 solid 3px;
 }
+
+
 
 @media screen and (max-width: 800px) {
 
