--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,12 @@ body {
     border: #484041 solid 3px;
 }
 
+.shw2 {
+    transition-duration: 0.4s;
+    border: #484041 solid 3px;
+    width: 17%;
+}
+
 .shw:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,.70), 0 17px 50px 0 rgba(0,0,0,.70);
 }
